deployment/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-busters
spec:
  selector:
    matchLabels:
      app: bot-busters
  template:
    spec:
      containers:
        - name: bot-busters
          image: eu.gcr.io/web3-335312/zk/bot-busters/bot-busters-staging:latest
